src/uLearn.Web/Content/ulearn.css
/* ... */
.exercise-block-status.waiting {
	background-color: #fdfa98;
}

.quiz__remains {
	margin-left: 10px;
}

.no-display {
	display: none;
}

.quiz-block__is-question {
	margin-top: 10px;
	margin-bottom: 40px;
}

.quiz-block__is-question__title {
	margin-bottom: 15px;
}

@media (min-width: 1300px) {
	.quiz-block__is-question__title.with-mark {
	}

	.quiz-block__is-question__title .glyphicon {
		margin-right: 5px;
		top: 0;
		left: -27px;
	}
	
	.quiz-block__is-question__title.with-mark .quiz-block__text {
		margin-left: -27px;
	}
}

.quiz-block__is-question__title > * {
	vertical-align: middle;	
}

.hide-side-bar-button {
	float: left;
}

/* ReSharper disable Html.CssClassElementsNotFound */
.falseQuizAnswer {
	background-color: lightcoral !important;
}

.rightQuizAnswer {
	background-color: lightgreen !important;
}

.manualQuizAnswer {
	background-color: lightblue !important;
}

.quiz-mistakes-explanation {
	margin-left: -20px;
	margin-top: 10px;
	color: #070;
}
/* ReSharper restore Html.CssClassElementsNotFound */

.video-container {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 30px;
	height: 0;
	overflow: hidden;
}

	.video-container iframe,
	.video-container object,
	.video-container embed {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
	}

.unit-statistic-ref {
	color: yellowgreen;
}

/* ReSharper disable Html.CssClassElementsNotFound */
.green-stat {
	background-color: lightgreen !important;
}

.red-stat {
	background-color: lightcoral !important;
}
/* ReSharper restore Html.CssClassElementsNotFound */

.wide-container {
	margin: 0 50px;
}

@media (max-width: 768px) {
	.wide-container{
		margin: 0 10px;
	}
}

.table.table-autowidth {
	width: auto;
}

div.tex {
	font-size: 1.2em;
	padding-bottom: 1em;
}

.course-name {
	font-size: 1.56em;
	font-weight: bold;
}

	.course-name > a:hover {
		background-color: white !important;
		color: #428BCA;
	}

.submitions-item {
	cursor: pointer;
}

table.diff {
	border-collapse: collapse;
	border: 1px solid lightblue /*darkgray*/;
	white-space: pre-wrap;
	table-layout: fixed;
	width: 100%;
}

	table.diff tbody {
		font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
	}

	table.diff thead th:first-child {
		width: 30px;
	}

	table.diff th {
		background: aliceblue;
		font-weight: normal;
		border: 1px solid lightblue /*#BBC*/;
		text-align: center !important;
	}

	table.diff tbody th {
		font-size: 11px;
		color: #428bca /*#886*/;
	}

	table.diff tbody td {
		padding: 0 .4em;
		padding-top: .4em;
		vertical-align: top;
		border-right: 1px solid aliceblue;
	}

	table.diff .different:nth-child(odd) td {
		background-color: #E99;
	}

	table.diff .different:nth-child(even) td {
		background-color: #FAA;
	}

	table.diff .equals:nth-child(odd) td {
		background-color: #9E9;
	}

	table.diff .equals:nth-child(even) td {
		background-color: #AFA;
	}

.expand-slide-diff-link {
	display: inline-block;
	margin-left: 20px;
	font-size: 13px;
	color: #999;
	border-color: #ccc;
}

.slide-diff-table {
	margin-top: 5px;
}

body.lti-component {
	padding-top: 0;
	margin-top: 0;
	overflow-x: hidden;
}

li.li-danger {
	background: #f5d8d6;
}

li.li-warning {
	background: #fbe9d0;
}

li.li-info {
	background: #d5eff6;
}

li.li-info > a:hover,
li.li-info > a:focus {
	background-color: #b9e4ef;
}

li.li-success {
	background: #dbf0db;
}

/* Comments */
.comments .comment {
	margin-top: 15px;
}

.comments:not(.comments__feed) .comment.is-reply,
.comments:not(.comments__feed) .reply-form.is-reply {
	margin-left: 68px;
}

.comments .comment .comment__author-avatar {
	margin-right: 2px;
}

.comments .comment .comment__header {
	margin: 0;
}

.comments .comment .comment__header,
.comments .comment .comment__footer {
	font-size: 9pt;
}

.comments .comment .comment__header .glyphicon,
.comments .comment .comment__footer .glyphicon:not(.glyphicon-heart){
	font-size: 80%;
	margin-right: 3px;
}

.comments .comment .comment__footer .glyphicon {
	position: relative;
	top: 1px;
}

.comments .comment .comment__header > div,
.comments .comment .comment__footer > div {
	display: inline-block;
}

.comments .comment .comment__header .comment__not-approved {
	display: inline;
}

.comments .comment .label {
	font-size: 7pt;
	vertical-align: middle;
	margin-left: 5px;
}

.comments .comment .label * {
	color: white;
}

.comments .comment .label-as-badge {
	padding: 1px 4px 2px;
	border-width: 1px;
	border-style: solid;
}

.comments .comment .comment__delete-link * {
	color: #933;
}

.comments .comment .comment__header .show-on-comment-hover,
.comments .comment .comment__footer .show-on-comment-hover,
.comments .comment .comment__header .show-on-comment-hover__if-not-pinned,
.comments .comment .comment__footer .show-on-comment-hover__if-not-pinned {
	display: none;
}

.comments .comment:hover .comment__header .show-on-comment-hover,
.comments .comment:hover .comment__footer .show-on-comment-hover,
.comments .comment:not(.is-pinned):hover .comment__header .show-on-comment-hover__if-not-pinned,
.comments .comment:not(.is-pinned):hover .comment__footer .show-on-comment-hover__if-not-pinned {
	display: initial;
}


.comments .comment .comment__author-name {
	font-size: 10pt;
	font-weight: bold;
}

.comments .comment .comment__author-name sup {
	font-weight: normal;
}

.comments .comment .comment__footer > :not(:first-child) {
	padding-left: 10px;
}

.comments .comment .comment__publish-time,
.comments .comment .comment__publish-time a {
	color: #bbb;
}

.comments .comment .comment__likes-count {
	cursor: pointer;
}

.comments .comment .comment__likes-count:hover {
	color: #900;
}

.comments .comment .comment__likes-count .glyphicon {
	color: #888;
	font-size: 10pt;
}

.comments .comment .comment__likes-count.is-liked .glyphicon,
.comments .comment .comment__likes-count.is-liked .comment__likes-count__counter {
	color: #c00;
}

.comments .comment .comment__likes-count:not(.is-liked):hover .glyphicon {
	color: #700;
}
/* ... */

